# edit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TC-mingw.cmake  pdcurses.cmake
dev/: planning.txt
inc/: cmd.h  config.h  edit.h  file.h  global.h  line.h  prompt.h  syn.h
src/: cmd.c  config.c  edit.c  file.c  line.c  main.c  prompt.c  syn.c
syn/: c.syn
